# ai-thought-preserved-bench

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  PLAN.md  README.md  TECHNICAL.md  pyproject.toml
.cursor/rules/: economy.mdc  model-validation.mdc  network-architecture.mdc  provider-binding.mdc
.githooks/: pre-commit
cache/anthropic--claude-haiku-4.5+Anthropic@xhigh-t1.2/plain_chat_history/: run_1.json  run_2.json  run_3.json  run_4.json  run_5.json
cache/anthropic--claude-haiku-4.5+Anthropic@xhigh-t1.2/tool_mediated_reply/: run_1.json  run_2.json  run_3.json  run_4.json  run_5.json
cache/anthropic--claude-opus-4.5+Anthropic@xhigh-t1.2/plain_chat_history/: run_1.json
cache/anthropic--claude-opus-4.5+Anthropic@xhigh-t1.2/tool_mediated_reply/: run_1.json
cache/anthropic--claude-opus-4.6+Anthropic@xhigh-t1.2/plain_chat_history/: run_1.json
cache/deepseek--deepseek-v3.2+DeepSeek@minimal-t1.2/: probe.json
cache/google--gemma-4-31b-it:free@minimal-t1.2/: probe.json
cache/x-ai--grok-4.1-fast@minimal-t1.2/: probe.json
configs/: models.yaml
results/: LEADERBOARD.md
src/: __init__.py  cache.py  cli.py  config.py  cost_tracker.py  evaluator.py  leaderboard.py  model_probe.py  openrouter_client.py  parallel_runner.py  prompt_builder.py  runner.py  scenarios.py  scorer.py
tests/: conftest.py  test_additional_coverage.py  test_config_and_cache.py  test_openrouter_client.py  test_outcome_classification.py  test_prompt_builder.py  test_reporting_and_scoring.py  test_runner_cli_probe.py
(+490 files in other folders)
