[build-system]
requires = ["setuptools>=68.0", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-thought-preserved-bench"
version = "0.1.0"
description = "Benchmark for reasoning replay continuity across normal chat and tool-mediated turns."
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "openai>=1.30.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
thought-preserved-bench = "src.cli:cli"

[tool.setuptools.packages.find]
include = ["src*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = []

[tool.coverage.report]
fail_under = 95
show_missing = true